--- a/part2-cost-shifting/output/table1-budget_shift.html
+++ b/part2-cost-shifting/output/table1-budget_shift.html
@@ -1,33 +1,36 @@
 
 <table style="text-align:center"><caption><strong>Table 1 - Budget Shifting</strong></caption>
-<tr><td colspan="5" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left"></td><td colspan="4"><em>Dependent variable:</em></td></tr>
-<tr><td></td><td colspan="4" style="border-bottom: 1px solid black"></td></tr>
-<tr><td style="text-align:left"></td><td colspan="4">log(out of pocket expense)</td></tr>
-<tr><td style="text-align:left"></td><td>(1)</td><td>(2)</td><td>(3)</td><td>(4)</td></tr>
-<tr><td colspan="5" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">FR</td><td>0.095<sup>***</sup></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left"></td><td>(0.028)</td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">ER</td><td></td><td>-0.113<sup>***</sup></td><td></td><td>-0.113<sup>***</sup></td></tr>
-<tr><td style="text-align:left"></td><td></td><td>(0.026)</td><td></td><td>(0.026)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">BBR</td><td></td><td></td><td>-0.020</td><td>-0.016</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td>(0.028)</td><td>(0.027)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">log(Debt)</td><td>0.009</td><td>0.008</td><td>0.001</td><td>0.007</td></tr>
-<tr><td style="text-align:left"></td><td>(0.030)</td><td>(0.029)</td><td>(0.030)</td><td>(0.030)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">log(GDP)</td><td>1.706<sup>***</sup></td><td>1.877<sup>***</sup></td><td>1.876<sup>***</sup></td><td>1.892<sup>***</sup></td></tr>
-<tr><td style="text-align:left"></td><td>(0.128)</td><td>(0.119)</td><td>(0.124)</td><td>(0.122)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">log(Population)</td><td>-0.534<sup>**</sup></td><td>-0.727<sup>***</sup></td><td>-0.732<sup>***</sup></td><td>-0.728<sup>***</sup></td></tr>
-<tr><td style="text-align:left"></td><td>(0.270)</td><td>(0.262)</td><td>(0.265)</td><td>(0.262)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">IMF Bailout</td><td>0.007</td><td>0.013</td><td>0.010</td><td>0.013</td></tr>
-<tr><td style="text-align:left"></td><td>(0.049)</td><td>(0.049)</td><td>(0.050)</td><td>(0.049)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td colspan="5" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Observations</td><td>714</td><td>714</td><td>714</td><td>714</td></tr>
-<tr><td style="text-align:left">R<sup>2</sup></td><td>0.989</td><td>0.990</td><td>0.989</td><td>0.990</td></tr>
-<tr><td style="text-align:left">Adjusted R<sup>2</sup></td><td>0.988</td><td>0.989</td><td>0.988</td><td>0.989</td></tr>
-<tr><td style="text-align:left">Residual Std. Error</td><td>0.185 (df = 648)</td><td>0.184 (df = 648)</td><td>0.186 (df = 648)</td><td>0.184 (df = 647)</td></tr>
-<tr><td colspan="5" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left"><em>Note:</em></td><td colspan="4" style="text-align:right"><sup>*</sup>p<0.1; <sup>**</sup>p<0.05; <sup>***</sup>p<0.01</td></tr>
+<tr><td colspan="6" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left"></td><td colspan="5"><em>Dependent variable:</em></td></tr>
+<tr><td></td><td colspan="5" style="border-bottom: 1px solid black"></td></tr>
+<tr><td style="text-align:left"></td><td colspan="5">log(out of pocket expense)</td></tr>
+<tr><td style="text-align:left"></td><td>(1)</td><td>(2)</td><td>(3)</td><td>(4)</td><td>(5)</td></tr>
+<tr><td colspan="6" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">FR</td><td>0.095<sup>***</sup></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left"></td><td>(0.028)</td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">ER</td><td></td><td>-0.113<sup>***</sup></td><td></td><td></td><td>-0.090<sup>***</sup></td></tr>
+<tr><td style="text-align:left"></td><td></td><td>(0.026)</td><td></td><td></td><td>(0.027)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">BBR</td><td></td><td></td><td>-0.020</td><td></td><td>-0.018</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td>(0.028)</td><td></td><td>(0.027)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">RR</td><td></td><td></td><td></td><td>-0.145<sup>***</sup></td><td>-0.106<sup>***</sup></td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td>(0.038)</td><td>(0.039)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">log(Debt)</td><td>0.009</td><td>0.008</td><td>0.001</td><td>-0.012</td><td>-0.005</td></tr>
+<tr><td style="text-align:left"></td><td>(0.030)</td><td>(0.029)</td><td>(0.030)</td><td>(0.030)</td><td>(0.030)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">log(GDP)</td><td>1.706<sup>***</sup></td><td>1.877<sup>***</sup></td><td>1.876<sup>***</sup></td><td>1.860<sup>***</sup></td><td>1.893<sup>***</sup></td></tr>
+<tr><td style="text-align:left"></td><td>(0.128)</td><td>(0.119)</td><td>(0.124)</td><td>(0.119)</td><td>(0.121)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">log(Population)</td><td>-0.534<sup>**</sup></td><td>-0.727<sup>***</sup></td><td>-0.732<sup>***</sup></td><td>-0.685<sup>***</sup></td><td>-0.695<sup>***</sup></td></tr>
+<tr><td style="text-align:left"></td><td>(0.270)</td><td>(0.262)</td><td>(0.265)</td><td>(0.263)</td><td>(0.261)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">IMF Bailout</td><td>0.007</td><td>0.013</td><td>0.010</td><td>0.008</td><td>0.012</td></tr>
+<tr><td style="text-align:left"></td><td>(0.049)</td><td>(0.049)</td><td>(0.050)</td><td>(0.049)</td><td>(0.049)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td colspan="6" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Observations</td><td>714</td><td>714</td><td>714</td><td>714</td><td>714</td></tr>
+<tr><td style="text-align:left">R<sup>2</sup></td><td>0.989</td><td>0.990</td><td>0.989</td><td>0.990</td><td>0.990</td></tr>
+<tr><td style="text-align:left">Adjusted R<sup>2</sup></td><td>0.988</td><td>0.989</td><td>0.988</td><td>0.988</td><td>0.989</td></tr>
+<tr><td style="text-align:left">Residual Std. Error</td><td>0.185 (df = 648)</td><td>0.184 (df = 648)</td><td>0.186 (df = 648)</td><td>0.184 (df = 648)</td><td>0.183 (df = 646)</td></tr>
+<tr><td colspan="6" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left"><em>Note:</em></td><td colspan="5" style="text-align:right"><sup>*</sup>p<0.1; <sup>**</sup>p<0.05; <sup>***</sup>p<0.01</td></tr>
 </table>
