--- a/part2-cost-shifting/output/table2-curative.html
+++ b/part2-cost-shifting/output/table2-curative.html
@@ -1,33 +1,36 @@
 
 <table style="text-align:center"><caption><strong>Table 2 - Budget Setting - Curative Care</strong></caption>
-<tr><td colspan="5" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left"></td><td colspan="4"><em>Dependent variable:</em></td></tr>
-<tr><td></td><td colspan="4" style="border-bottom: 1px solid black"></td></tr>
-<tr><td style="text-align:left"></td><td colspan="4">log(Curative care)</td></tr>
-<tr><td style="text-align:left"></td><td>(1)</td><td>(2)</td><td>(3)</td><td>(4)</td></tr>
-<tr><td colspan="5" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">FR</td><td>0.028<sup>*</sup></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left"></td><td>(0.015)</td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">ER</td><td></td><td>-0.004</td><td></td><td>-0.005</td></tr>
-<tr><td style="text-align:left"></td><td></td><td>(0.014)</td><td></td><td>(0.014)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">BBR</td><td></td><td></td><td>0.029<sup>*</sup></td><td>0.029<sup>*</sup></td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td>(0.016)</td><td>(0.016)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">log(Debt)</td><td>-0.075<sup>***</sup></td><td>-0.075<sup>***</sup></td><td>-0.075<sup>***</sup></td><td>-0.075<sup>***</sup></td></tr>
-<tr><td style="text-align:left"></td><td>(0.019)</td><td>(0.019)</td><td>(0.019)</td><td>(0.019)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">log(GDP)</td><td>0.811<sup>***</sup></td><td>0.846<sup>***</sup></td><td>0.812<sup>***</sup></td><td>0.814<sup>***</sup></td></tr>
-<tr><td style="text-align:left"></td><td>(0.081)</td><td>(0.079)</td><td>(0.081)</td><td>(0.081)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">log(Population)</td><td>-0.314<sup>**</sup></td><td>-0.344<sup>**</sup></td><td>-0.352<sup>**</sup></td><td>-0.354<sup>**</sup></td></tr>
-<tr><td style="text-align:left"></td><td>(0.158)</td><td>(0.158)</td><td>(0.157)</td><td>(0.157)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">IMF bailout</td><td>-0.042<sup>*</sup></td><td>-0.041<sup>*</sup></td><td>-0.045<sup>*</sup></td><td>-0.044<sup>*</sup></td></tr>
-<tr><td style="text-align:left"></td><td>(0.023)</td><td>(0.023)</td><td>(0.023)</td><td>(0.023)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td colspan="5" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Observations</td><td>469</td><td>469</td><td>469</td><td>469</td></tr>
-<tr><td style="text-align:left">R<sup>2</sup></td><td>0.998</td><td>0.998</td><td>0.998</td><td>0.998</td></tr>
-<tr><td style="text-align:left">Adjusted R<sup>2</sup></td><td>0.998</td><td>0.998</td><td>0.998</td><td>0.998</td></tr>
-<tr><td style="text-align:left">Residual Std. Error</td><td>0.078 (df = 404)</td><td>0.078 (df = 404)</td><td>0.078 (df = 404)</td><td>0.078 (df = 403)</td></tr>
-<tr><td colspan="5" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left"><em>Note:</em></td><td colspan="4" style="text-align:right"><sup>*</sup>p<0.1; <sup>**</sup>p<0.05; <sup>***</sup>p<0.01</td></tr>
+<tr><td colspan="6" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left"></td><td colspan="5"><em>Dependent variable:</em></td></tr>
+<tr><td></td><td colspan="5" style="border-bottom: 1px solid black"></td></tr>
+<tr><td style="text-align:left"></td><td colspan="5">log(Curative care)</td></tr>
+<tr><td style="text-align:left"></td><td>(1)</td><td>(2)</td><td>(3)</td><td>(4)</td><td>(5)</td></tr>
+<tr><td colspan="6" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">FR</td><td>0.028<sup>*</sup></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left"></td><td>(0.015)</td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">ER</td><td></td><td>-0.004</td><td></td><td></td><td>-0.011</td></tr>
+<tr><td style="text-align:left"></td><td></td><td>(0.014)</td><td></td><td></td><td>(0.014)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">BBR</td><td></td><td></td><td>0.029<sup>*</sup></td><td></td><td>0.024</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td>(0.016)</td><td></td><td>(0.016)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">RR</td><td></td><td></td><td></td><td>0.056<sup>***</sup></td><td>0.055<sup>***</sup></td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td>(0.020)</td><td>(0.020)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">log(Debt)</td><td>-0.075<sup>***</sup></td><td>-0.075<sup>***</sup></td><td>-0.075<sup>***</sup></td><td>-0.064<sup>***</sup></td><td>-0.064<sup>***</sup></td></tr>
+<tr><td style="text-align:left"></td><td>(0.019)</td><td>(0.019)</td><td>(0.019)</td><td>(0.019)</td><td>(0.019)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">log(GDP)</td><td>0.811<sup>***</sup></td><td>0.846<sup>***</sup></td><td>0.812<sup>***</sup></td><td>0.837<sup>***</sup></td><td>0.814<sup>***</sup></td></tr>
+<tr><td style="text-align:left"></td><td>(0.081)</td><td>(0.079)</td><td>(0.081)</td><td>(0.078)</td><td>(0.080)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">log(Population)</td><td>-0.314<sup>**</sup></td><td>-0.344<sup>**</sup></td><td>-0.352<sup>**</sup></td><td>-0.347<sup>**</sup></td><td>-0.359<sup>**</sup></td></tr>
+<tr><td style="text-align:left"></td><td>(0.158)</td><td>(0.158)</td><td>(0.157)</td><td>(0.156)</td><td>(0.156)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">IMF bailout</td><td>-0.042<sup>*</sup></td><td>-0.041<sup>*</sup></td><td>-0.045<sup>*</sup></td><td>-0.043<sup>*</sup></td><td>-0.045<sup>*</sup></td></tr>
+<tr><td style="text-align:left"></td><td>(0.023)</td><td>(0.023)</td><td>(0.023)</td><td>(0.023)</td><td>(0.023)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td colspan="6" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Observations</td><td>469</td><td>469</td><td>469</td><td>469</td><td>469</td></tr>
+<tr><td style="text-align:left">R<sup>2</sup></td><td>0.998</td><td>0.998</td><td>0.998</td><td>0.998</td><td>0.998</td></tr>
+<tr><td style="text-align:left">Adjusted R<sup>2</sup></td><td>0.998</td><td>0.998</td><td>0.998</td><td>0.998</td><td>0.998</td></tr>
+<tr><td style="text-align:left">Residual Std. Error</td><td>0.078 (df = 404)</td><td>0.078 (df = 404)</td><td>0.078 (df = 404)</td><td>0.077 (df = 404)</td><td>0.077 (df = 402)</td></tr>
+<tr><td colspan="6" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left"><em>Note:</em></td><td colspan="5" style="text-align:right"><sup>*</sup>p<0.1; <sup>**</sup>p<0.05; <sup>***</sup>p<0.01</td></tr>
 </table>
