--- a/part2-cost-shifting/output/table4-preventative.html
+++ b/part2-cost-shifting/output/table4-preventative.html
@@ -7,22 +7,25 @@
 <tr><td colspan="5" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">FR</td><td>0.317<sup>***</sup></td><td></td><td></td><td></td></tr>
 <tr><td style="text-align:left"></td><td>(0.116)</td><td></td><td></td><td></td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">ER</td><td></td><td>-0.263<sup>***</sup></td><td></td><td>-0.267<sup>***</sup></td></tr>
-<tr><td style="text-align:left"></td><td></td><td>(0.098)</td><td></td><td>(0.098)</td></tr>
+<tr><td style="text-align:left">ER</td><td></td><td>-0.263<sup>***</sup></td><td></td><td>-0.285<sup>***</sup></td></tr>
+<tr><td style="text-align:left"></td><td></td><td>(0.098)</td><td></td><td>(0.099)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">BBR</td><td></td><td></td><td>0.168</td><td>0.176</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td>(0.116)</td><td>(0.115)</td></tr>
+<tr><td style="text-align:left">BBR</td><td></td><td></td><td>0.168</td><td>0.164</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td>(0.116)</td><td>(0.116)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">log(Debt)</td><td>-0.435<sup>***</sup></td><td>-0.424<sup>***</sup></td><td>-0.462<sup>***</sup></td><td>-0.443<sup>***</sup></td></tr>
-<tr><td style="text-align:left"></td><td>(0.126)</td><td>(0.126)</td><td>(0.127)</td><td>(0.126)</td></tr>
+<tr><td style="text-align:left">RR</td><td></td><td></td><td></td><td>0.142</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td>(0.143)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">log(GDP)</td><td>2.771<sup>***</sup></td><td>3.462<sup>***</sup></td><td>3.151<sup>***</sup></td><td>3.287<sup>***</sup></td></tr>
+<tr><td style="text-align:left">log(Debt)</td><td>-0.435<sup>***</sup></td><td>-0.424<sup>***</sup></td><td>-0.462<sup>***</sup></td><td>-0.415<sup>***</sup></td></tr>
+<tr><td style="text-align:left"></td><td>(0.126)</td><td>(0.126)</td><td>(0.127)</td><td>(0.129)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">log(GDP)</td><td>2.771<sup>***</sup></td><td>3.462<sup>***</sup></td><td>3.151<sup>***</sup></td><td>3.274<sup>***</sup></td></tr>
 <tr><td style="text-align:left"></td><td>(0.517)</td><td>(0.479)</td><td>(0.493)</td><td>(0.492)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">log(Population)</td><td>0.264</td><td>-0.457</td><td>-0.504</td><td>-0.453</td></tr>
-<tr><td style="text-align:left"></td><td>(1.084)</td><td>(1.047)</td><td>(1.053)</td><td>(1.046)</td></tr>
+<tr><td style="text-align:left">log(Population)</td><td>0.264</td><td>-0.457</td><td>-0.504</td><td>-0.567</td></tr>
+<tr><td style="text-align:left"></td><td>(1.084)</td><td>(1.047)</td><td>(1.053)</td><td>(1.052)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">IMF bailout</td><td>0.100</td><td>0.134</td><td>0.108</td><td>0.121</td></tr>
+<tr><td style="text-align:left">IMF bailout</td><td>0.100</td><td>0.134</td><td>0.108</td><td>0.118</td></tr>
 <tr><td style="text-align:left"></td><td>(0.172)</td><td>(0.172)</td><td>(0.173)</td><td>(0.172)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
 <tr><td style="text-align:left">Govt lean left</td><td>0.001</td><td>0.001</td><td>0.001</td><td>0.001</td></tr>
@@ -31,6 +34,6 @@
 <tr><td colspan="5" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Observations</td><td>485</td><td>485</td><td>485</td><td>485</td></tr>
 <tr><td style="text-align:left">R<sup>2</sup></td><td>0.929</td><td>0.928</td><td>0.928</td><td>0.929</td></tr>
 <tr><td style="text-align:left">Adjusted R<sup>2</sup></td><td>0.918</td><td>0.918</td><td>0.917</td><td>0.918</td></tr>
-<tr><td style="text-align:left">Residual Std. Error</td><td>0.553 (df = 421)</td><td>0.553 (df = 421)</td><td>0.556 (df = 421)</td><td>0.552 (df = 420)</td></tr>
+<tr><td style="text-align:left">Residual Std. Error</td><td>0.553 (df = 421)</td><td>0.553 (df = 421)</td><td>0.556 (df = 421)</td><td>0.552 (df = 419)</td></tr>
 <tr><td colspan="5" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left"><em>Note:</em></td><td colspan="4" style="text-align:right"><sup>*</sup>p<0.1; <sup>**</sup>p<0.05; <sup>***</sup>p<0.01</td></tr>
 </table>
