--- a/part2-cost-shifting/output/table6-beds.html
+++ b/part2-cost-shifting/output/table6-beds.html
@@ -1,33 +1,36 @@
 
 <table style="text-align:center"><caption><strong>Table 6 - Supply Control - Hospital Beds</strong></caption>
-<tr><td colspan="5" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left"></td><td colspan="4"><em>Dependent variable:</em></td></tr>
-<tr><td></td><td colspan="4" style="border-bottom: 1px solid black"></td></tr>
-<tr><td style="text-align:left"></td><td colspan="4">log(hospital beds)</td></tr>
-<tr><td style="text-align:left"></td><td>(1)</td><td>(2)</td><td>(3)</td><td>(4)</td></tr>
-<tr><td colspan="5" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">FR</td><td>0.075<sup>***</sup></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left"></td><td>(0.015)</td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">ER</td><td></td><td>0.009</td><td></td><td>0.007</td></tr>
-<tr><td style="text-align:left"></td><td></td><td>(0.015)</td><td></td><td>(0.015)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">BBR</td><td></td><td></td><td>0.026</td><td>0.026</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td>(0.016)</td><td>(0.016)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">log(Debt)</td><td>-0.019</td><td>-0.010</td><td>-0.006</td><td>-0.005</td></tr>
-<tr><td style="text-align:left"></td><td>(0.018)</td><td>(0.018)</td><td>(0.018)</td><td>(0.018)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">log(GDP)</td><td>-0.042</td><td>0.021</td><td>0.002</td><td>0.001</td></tr>
-<tr><td style="text-align:left"></td><td>(0.058)</td><td>(0.058)</td><td>(0.059)</td><td>(0.059)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">log(Population 80 above)</td><td>0.071</td><td>0.056</td><td>0.043</td><td>0.039</td></tr>
-<tr><td style="text-align:left"></td><td>(0.056)</td><td>(0.058)</td><td>(0.059)</td><td>(0.059)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">IMF Bailout</td><td>0.017</td><td>0.018</td><td>0.016</td><td>0.015</td></tr>
-<tr><td style="text-align:left"></td><td>(0.022)</td><td>(0.023)</td><td>(0.023)</td><td>(0.023)</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td colspan="5" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Observations</td><td>635</td><td>635</td><td>635</td><td>635</td></tr>
-<tr><td style="text-align:left">R<sup>2</sup></td><td>0.996</td><td>0.996</td><td>0.996</td><td>0.996</td></tr>
-<tr><td style="text-align:left">Adjusted R<sup>2</sup></td><td>0.995</td><td>0.995</td><td>0.995</td><td>0.995</td></tr>
-<tr><td style="text-align:left">Residual Std. Error</td><td>0.096 (df = 569)</td><td>0.098 (df = 569)</td><td>0.097 (df = 569)</td><td>0.097 (df = 568)</td></tr>
-<tr><td colspan="5" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left"><em>Note:</em></td><td colspan="4" style="text-align:right"><sup>*</sup>p<0.1; <sup>**</sup>p<0.05; <sup>***</sup>p<0.01</td></tr>
+<tr><td colspan="6" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left"></td><td colspan="5"><em>Dependent variable:</em></td></tr>
+<tr><td></td><td colspan="5" style="border-bottom: 1px solid black"></td></tr>
+<tr><td style="text-align:left"></td><td colspan="5">log(hospital beds)</td></tr>
+<tr><td style="text-align:left"></td><td>(1)</td><td>(2)</td><td>(3)</td><td>(4)</td><td>(5)</td></tr>
+<tr><td colspan="6" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">FR</td><td>0.075<sup>***</sup></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left"></td><td>(0.015)</td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">ER</td><td></td><td>0.009</td><td></td><td></td><td>0.003</td></tr>
+<tr><td style="text-align:left"></td><td></td><td>(0.015)</td><td></td><td></td><td>(0.015)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">BBR</td><td></td><td></td><td>0.026</td><td></td><td>0.025</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td>(0.016)</td><td></td><td>(0.016)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">RR</td><td></td><td></td><td></td><td>0.035</td><td>0.033</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td>(0.022)</td><td>(0.023)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">log(Debt)</td><td>-0.019</td><td>-0.010</td><td>-0.006</td><td>-0.007</td><td>-0.003</td></tr>
+<tr><td style="text-align:left"></td><td>(0.018)</td><td>(0.018)</td><td>(0.018)</td><td>(0.018)</td><td>(0.018)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">log(GDP)</td><td>-0.042</td><td>0.021</td><td>0.002</td><td>0.016</td><td>-0.003</td></tr>
+<tr><td style="text-align:left"></td><td>(0.058)</td><td>(0.058)</td><td>(0.059)</td><td>(0.058)</td><td>(0.059)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">log(Population 80 above)</td><td>0.071</td><td>0.056</td><td>0.043</td><td>0.054</td><td>0.034</td></tr>
+<tr><td style="text-align:left"></td><td>(0.056)</td><td>(0.058)</td><td>(0.059)</td><td>(0.058)</td><td>(0.059)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">IMF Bailout</td><td>0.017</td><td>0.018</td><td>0.016</td><td>0.019</td><td>0.015</td></tr>
+<tr><td style="text-align:left"></td><td>(0.022)</td><td>(0.023)</td><td>(0.023)</td><td>(0.023)</td><td>(0.023)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td><td></td></tr>
+<tr><td colspan="6" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Observations</td><td>635</td><td>635</td><td>635</td><td>635</td><td>635</td></tr>
+<tr><td style="text-align:left">R<sup>2</sup></td><td>0.996</td><td>0.996</td><td>0.996</td><td>0.996</td><td>0.996</td></tr>
+<tr><td style="text-align:left">Adjusted R<sup>2</sup></td><td>0.995</td><td>0.995</td><td>0.995</td><td>0.995</td><td>0.995</td></tr>
+<tr><td style="text-align:left">Residual Std. Error</td><td>0.096 (df = 569)</td><td>0.098 (df = 569)</td><td>0.097 (df = 569)</td><td>0.097 (df = 569)</td><td>0.097 (df = 567)</td></tr>
+<tr><td colspan="6" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left"><em>Note:</em></td><td colspan="5" style="text-align:right"><sup>*</sup>p<0.1; <sup>**</sup>p<0.05; <sup>***</sup>p<0.01</td></tr>
 </table>
