--- a/part2-cost-shifting/output/table8-capital.html
+++ b/part2-cost-shifting/output/table8-capital.html
@@ -7,27 +7,30 @@
 <tr><td colspan="5" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">FR</td><td>0.001</td><td></td><td></td><td></td></tr>
 <tr><td style="text-align:left"></td><td>(0.060)</td><td></td><td></td><td></td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">ER</td><td></td><td>-0.040</td><td></td><td>-0.041</td></tr>
+<tr><td style="text-align:left">ER</td><td></td><td>-0.040</td><td></td><td>-0.082</td></tr>
 <tr><td style="text-align:left"></td><td></td><td>(0.063)</td><td></td><td>(0.063)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">BBR</td><td></td><td></td><td>0.016</td><td>0.017</td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td>(0.061)</td><td>(0.061)</td></tr>
+<tr><td style="text-align:left">BBR</td><td></td><td></td><td>0.016</td><td>0.021</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td>(0.061)</td><td>(0.060)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">log(Debt)</td><td>-0.473<sup>***</sup></td><td>-0.476<sup>***</sup></td><td>-0.472<sup>***</sup></td><td>-0.476<sup>***</sup></td></tr>
-<tr><td style="text-align:left"></td><td>(0.070)</td><td>(0.070)</td><td>(0.070)</td><td>(0.070)</td></tr>
+<tr><td style="text-align:left">RR</td><td></td><td></td><td></td><td>0.308<sup>***</sup></td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td>(0.089)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">log(GDP)</td><td>2.050<sup>***</sup></td><td>2.042<sup>***</sup></td><td>2.037<sup>***</sup></td><td>2.026<sup>***</sup></td></tr>
-<tr><td style="text-align:left"></td><td>(0.293)</td><td>(0.281)</td><td>(0.286)</td><td>(0.287)</td></tr>
+<tr><td style="text-align:left">log(Debt)</td><td>-0.473<sup>***</sup></td><td>-0.476<sup>***</sup></td><td>-0.472<sup>***</sup></td><td>-0.428<sup>***</sup></td></tr>
+<tr><td style="text-align:left"></td><td>(0.070)</td><td>(0.070)</td><td>(0.070)</td><td>(0.071)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">log(Population)</td><td>0.787</td><td>0.763</td><td>0.805</td><td>0.786</td></tr>
-<tr><td style="text-align:left"></td><td>(0.673)</td><td>(0.649)</td><td>(0.654)</td><td>(0.655)</td></tr>
+<tr><td style="text-align:left">log(GDP)</td><td>2.050<sup>***</sup></td><td>2.042<sup>***</sup></td><td>2.037<sup>***</sup></td><td>2.112<sup>***</sup></td></tr>
+<tr><td style="text-align:left"></td><td>(0.293)</td><td>(0.281)</td><td>(0.286)</td><td>(0.284)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">IMF Bailout</td><td>-0.142</td><td>-0.134</td><td>-0.143</td><td>-0.136</td></tr>
-<tr><td style="text-align:left"></td><td>(0.110)</td><td>(0.111)</td><td>(0.110)</td><td>(0.111)</td></tr>
+<tr><td style="text-align:left">log(Population)</td><td>0.787</td><td>0.763</td><td>0.805</td><td>0.606</td></tr>
+<tr><td style="text-align:left"></td><td>(0.673)</td><td>(0.649)</td><td>(0.654)</td><td>(0.650)</td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
+<tr><td style="text-align:left">IMF Bailout</td><td>-0.142</td><td>-0.134</td><td>-0.143</td><td>-0.127</td></tr>
+<tr><td style="text-align:left"></td><td>(0.110)</td><td>(0.111)</td><td>(0.110)</td><td>(0.110)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td><td></td></tr>
 <tr><td colspan="5" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Observations</td><td>524</td><td>524</td><td>524</td><td>524</td></tr>
-<tr><td style="text-align:left">R<sup>2</sup></td><td>0.976</td><td>0.976</td><td>0.976</td><td>0.976</td></tr>
-<tr><td style="text-align:left">Adjusted R<sup>2</sup></td><td>0.973</td><td>0.973</td><td>0.973</td><td>0.973</td></tr>
-<tr><td style="text-align:left">Residual Std. Error</td><td>0.360 (df = 462)</td><td>0.360 (df = 462)</td><td>0.360 (df = 462)</td><td>0.360 (df = 461)</td></tr>
+<tr><td style="text-align:left">R<sup>2</sup></td><td>0.976</td><td>0.976</td><td>0.976</td><td>0.977</td></tr>
+<tr><td style="text-align:left">Adjusted R<sup>2</sup></td><td>0.973</td><td>0.973</td><td>0.973</td><td>0.974</td></tr>
+<tr><td style="text-align:left">Residual Std. Error</td><td>0.360 (df = 462)</td><td>0.360 (df = 462)</td><td>0.360 (df = 462)</td><td>0.356 (df = 460)</td></tr>
 <tr><td colspan="5" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left"><em>Note:</em></td><td colspan="4" style="text-align:right"><sup>*</sup>p<0.1; <sup>**</sup>p<0.05; <sup>***</sup>p<0.01</td></tr>
 </table>
